test/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-load-balancer
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
